--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "db:push": "dotenv drizzle-kit push:pg",
+    "db:push:production": "dotenv -e .env.production.local drizzle-kit push:pg",
     "db:studio": "dotenv drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
