--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/server": "^10.37.1",
     "drizzle-orm": "^0.28.5",
     "next": "^13.5.4",
+    "openai": "^4.24.1",
     "postgres": "^3.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
